hphp/hack/test/typecheck/naming_fail_test9.php.exp
File "naming_fail_test9.php", line 10, characters 10-11:
Variable $e is undefined, or there exists at least one control flow path reaching this point which does not define $e. (Naming[2050])
